--- a/Horse_Colic_Death_Prediction.ipynb
+++ b/Horse_Colic_Death_Prediction.ipynb
@@ -2363,9 +2363,11 @@
     "\n",
     "2. Li, Susan. “Building A Logistic Regression in Python, Step by Step.” Towards Data Science, Towards Data Science, 29 Sept. 2017, towardsdatascience.com/building-a-logistic-regression-in-python-step-by-step-becd4d56c9c8.\n",
     "\n",
-    "3. “Tuning SVM : Bringing Accuracy from 62 % to 98.8 % | Kaggle.” Countries of the World | Kaggle, www.kaggle.com/himakund/tuning-svm-bringing-accuracy-from-62-to-98-8.\n",
+    "3. “Sklearn Plot Confusion Matrix with Labels.” Stack Overflow, stackoverflow.com/questions/19233771/sklearn-plot-confusion-matrix-with-labels.\n",
     "\n",
-    "4. UCI. “Horse Colic Dataset | Kaggle.” Countries of the World | Kaggle, 6 June 2017, www.kaggle.com/uciml/horse-colic.\n",
+    "4. “Tuning SVM : Bringing Accuracy from 62 % to 98.8 % | Kaggle.” Countries of the World | Kaggle, www.kaggle.com/himakund/tuning-svm-bringing-accuracy-from-62-to-98-8.\n",
+    "\n",
+    "5. UCI. “Horse Colic Dataset | Kaggle.” Countries of the World | Kaggle, 6 June 2017, www.kaggle.com/uciml/horse-colic.\n",
     "\n",
     "\n"
    ]
