--- a/Horse_Colic_Death_Prediction.ipynb
+++ b/Horse_Colic_Death_Prediction.ipynb
@@ -2305,7 +2305,7 @@
     "bayes_roc_auc = roc_auc_score(y_te, predB)\n",
     "fpr, tpr, thresholds = roc_curve(y_te, bclf.predict_proba(X_te)[:,1])\n",
     "plt.figure()\n",
-    "plt.plot(fpr, tpr, label='Logistic Regression (area = %0.2f)' % bayes_roc_auc)\n",
+    "plt.plot(fpr, tpr, label='Bayesian Classification (area = %0.2f)' % bayes_roc_auc)\n",
     "plt.plot([0, 1], [0, 1],'r--')\n",
     "plt.xlim([0.0, 1.0])\n",
     "plt.ylim([0.0, 1.05])\n",
