--- a/Horse_Colic_Death_Prediction.ipynb
+++ b/Horse_Colic_Death_Prediction.ipynb
@@ -46,12 +46,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "This dataset is from Kaggle which pulled it from UCI Machine Learning databases. The data was collected to attempt to learn how to best predict whether the horse will survive. There are numerous predictors regarding the horses health. Death and euthinasia are both considered as the same outcome for this research. "
+    "This dataset is from Kaggle, which pulled it from UCI Machine Learning databases. The data was collected to attempt to learn how to best predict whether the horse will survive. There are numerous predictors regarding the horse’s health. Death and euthanasia are both considered as the same outcome for this research."
    ]
   },
   {
