--- a/Horse_Colic_Death_Prediction.ipynb
+++ b/Horse_Colic_Death_Prediction.ipynb
@@ -2326,10 +2326,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both logistic regression and bayesian classification display an excellent capability to determine whether a horse will live or die following a colic. Each method of evaluating the models shows that logistic regression is slightly better but not by much. Both of these methods are easy to interpert. We use three primary methods of evaluating. K-fold cross validation where we select k to be 10. Logistic regression's percent accurracy is 100%. This is most likely due to rounding since it is clear from later methods that while it is almost perfect it does make some errors in classification. Bayesian has a cross validation pecent accuracy of 95.1%. The confusion matrices both show us where the misclassifications are happening. We see that logistic classifies one point incorrectly and bayesian misclassified 4 points. We again see nearly perfect results for both methods when we look at the precision recall and ROC curves. The clear relationship between medical history and whether a horse lives or dies encourages many oppurutunities for further investigation in additional research projects. "
+    "Both logistic regression and Bayesian classification display an excellent capability to determine whether a horse will live or die following a colic. Each method of evaluating the models shows that logistic regression is slightly better but not by much. Both of these methods are easy to interpret. We use three primary methods of evaluating. K-fold cross validation where we select k to be 10. Logistic regression's percent accuracy is 100%. This is most likely due to rounding since it is clear from later methods that while it is almost perfect it does make some errors in classification. Bayesian has a cross validation percent accuracy of 95.1%. The confusion matrices both show us where the misclassifications are happening. We see that logistic classifies one point incorrectly and Bayesian misclassified 4 points. We again see nearly perfect results for both methods when we look at the precision recall and ROC curves. The clear relationship between medical history and whether a horse lives or dies encourages many opportunities for further investigation in additional research projects."
    ]
   },
   {
